removing the keystore dependencies for both orders and carts applications
- Both orders and carts now use oracle wallets and not the keystores
- this makes is unnecessary to bake in the ojdbs.properties on to the containers.
- the /app/config directory is removed and no longer needed.
- the TNS_ADMIN env var is now set to the default location of the JDBC instant client.
- the app simply  relies on the default ojdbc.properties from the downloaded wallets (default is to use the oracle wallet and not the JKS)

--- a/deploy/complete/helm-chart/mushop/charts/orders/values.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/orders/values.yaml
@@ -20,9 +20,8 @@ secrets:
 
 env:
   zipkin: zipkin.jaeger.svc.cluster.local
-  javaOpts: -Xms32m -Xmx256m -XX:+UseG1GC -Dlogging.level.mushop.orders=INFO  -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
-  tnsAdmin: "/app/config"
   javaOpts: -Xms32m -Xmx256m -XX:+UseG1GC -Dlogging.level.mushop.orders=INFO  -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false -Doracle.jdbc.fanEnabled=false
+  tnsAdmin: "/usr/lib/oracle/19.3/client64/lib/network/admin/"
   natsHost: "nats"
   natsPort: 4222
   newOrdersSubject: mushop-orders
