--- a/docs/themes/redwood/data/config/scripts.yaml
+++ b/docs/themes/redwood/data/config/scripts.yaml
@@ -12,6 +12,7 @@ scripts:
     async: true
     include:
       - node_modules/mermaid/dist/mermaid.min.js
+      - site/mermaid.js
 
   - name: site
     async: true
