--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,11 +1,11 @@
-name: Publish Slate Docs
+name: Publish Docs
 
 on:
   push:
     branches: 
     - master
     paths:
-    - 'src/docs/**'
+    - 'docs/**'
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -16,19 +16,14 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: '10.x'
-    - name: Setup Ruby
-      uses: actions/setup-ruby@v1
-      with:
-        ruby-version: 2.6.x
-    - name: Build Slate Docs
+    - name: Build Hugo Docs
       run: |
-          cd src/docs
-          gem install bundler
-          bundle install --jobs 4 --retry 3
-          bundle exec middleman build --clean
+          cd docs
+          npm ci
+          npm run build
     - name: Publish to Github Pages
       uses: peaceiris/actions-gh-pages@v2
       env:
         ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: src/docs/build
+        PUBLISH_DIR: docs/public
