--- a/.github/workflows/test-docs.yml
+++ b/.github/workflows/test-docs.yml
@@ -1,9 +1,9 @@
-name: Test Build Slate Docs
+name: Test Build Docs
 
 on:
   pull_request:
     paths:
-    - 'src/docs/**'
+    - 'docs/**'
 jobs:
   test-build:
     runs-on: ubuntu-latest
@@ -14,13 +14,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: '10.x'
-    - name: Setup Ruby
-      uses: actions/setup-ruby@v1
-      with:
-        ruby-version: 2.6.x
-    - name: Build Slate Docs
+    - name: Build Hugo Docs
       run: |
-          cd src/docs
-          gem install bundler
-          bundle install --jobs 4 --retry 3
-          bundle exec middleman build --clean
+          cd docs
+          npm ci
+          npm run build
+          ls -al public
