fix build to remove manual index

--- a/docs/package.json
+++ b/docs/package.json
@@ -12,9 +12,8 @@
   },
   "scripts": {
     "clean": "rimraf public",
-    "prebuild": "npm run clean && npm run index",
+    "prebuild": "npm run clean",
     "build": "hugo -D",
-    "index": "node idx.js",
     "start": "hugo server -D --disableFastRender"
   },
   "author": "Oracle",
