print node/npm versions

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,6 +24,8 @@ jobs:
     - name: Build Hugo Docs
       run: |
           cd docs
+          node -v
+          npm -v
           npm ci
           hugo -D
     - name: Publish to Github Pages
