--- a/.github/workflows/test-docs.yml
+++ b/.github/workflows/test-docs.yml
@@ -22,6 +22,8 @@ jobs:
     - name: Build Hugo Docs
       run: |
           cd docs
+          node -v
+          npm -v
           npm ci
           hugo -D
           ls -al public
