--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,8 +24,7 @@ jobs:
     - name: Build Hugo Docs
       run: |
           cd docs
-          npm ci
-          hugo -D
+          make build
     - name: Publish to Github Pages
       uses: peaceiris/actions-gh-pages@v2
       env:
