--- a/docs/themes/redwood/theme.toml
+++ b/docs/themes/redwood/theme.toml
@@ -1,3 +1,7 @@
+#
+# Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+# The Universal Permissive License (UPL), Version 1.0
+#
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
@@ -11,7 +15,7 @@ features = []
 min_version = "0.41"
 
 [author]
-  name = ""
+  name = "Oracle"
   homepage = ""
 
 # If porting an existing theme
