--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -1,3 +1,7 @@
+#
+# Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+# The Universal Permissive License (UPL), Version 1.0
+#
 public
 node_modules
 themes/*
