--- a/docs/config.toml
+++ b/docs/config.toml
@@ -1,3 +1,7 @@
+#
+# Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+# The Universal Permissive License (UPL), Version 1.0
+#
 baseURL = "https://oracle-quickstart.github.io/oci-cloudnative/"
 languageCode = "en-us"
 title = "MuShop"
