--- a/docs/data/config/settings.yaml
+++ b/docs/data/config/settings.yaml
@@ -1,4 +1,8 @@
-toggles: 
+#
+# Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+# The Universal Permissive License (UPL), Version 1.0
+#
+toggles:
   - setting: platform
     target: html
     label: menu-settings-os
