--- a/.github/workflows/test-docs.yml
+++ b/.github/workflows/test-docs.yml
@@ -3,7 +3,7 @@ name: Test Build Docs
 on:
   pull_request:
     paths:
-    - 'docs/**'
+    - 'src/docs/**'
 jobs:
   test-build:
     runs-on: ubuntu-latest
@@ -21,6 +21,6 @@ jobs:
         extended: true
     - name: Build Hugo Docs
       run: |
-          cd docs
+          cd src/docs
           make build
           ls -al public
