--- a/src/carts/Dockerfile
+++ b/src/carts/Dockerfile
@@ -38,5 +38,6 @@ WORKDIR /app
 
 ENV APPLICATION_NAME=${APPLICATION_NAME}
 ENV VERSION=${VERSION}
+ENV TNS_ADMIN=/usr/lib/oracle/19.3/client64/lib/network/admin/
 
 ENTRYPOINT java $JAVA_OPTS -Dserver.port=80 -jar /app/${APPLICATION_NAME}-${VERSION}.jar
