--- a/deploy/complete/docker-compose/docker-compose.yml
+++ b/deploy/complete/docker-compose/docker-compose.yml
@@ -152,7 +152,7 @@ services:
       - OADB_USER
       - OADB_PW
       - OADB_SERVICE=mock
-      - JAVA_OPTS=-Xms32m -Xmx256m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false -Doracle.jdbc.fanEnabled=false 
+      - JAVA_OPTS=-Xms32m -Xmx256m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom -Doracle.jdbc.fanEnabled=false 
 
   payment:
     image: iad.ocir.io/oracle/ateam/mushop-payment:0.0.1
