--- a/deploy/complete/helm-chart/mushop/charts/assets/templates/destroy-job.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/assets/templates/destroy-job.yaml
@@ -13,6 +13,8 @@ spec:
   backoffLimit: 1
   template:
     metadata:
+      annotations:
+        sidecar.istio.io/inject: "false"
       labels:
         app.kubernetes.io/name: {{ include "assets.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
