--- a/deploy/complete/helm-chart/mushop/charts/orders/templates/orders-job.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/orders/templates/orders-job.yaml
@@ -9,6 +9,8 @@ spec:
   ttlSecondsAfterFinished: 120
   template:
     metadata:
+      annotations:
+        sidecar.istio.io/inject: "false"
       labels:
         app.kubernetes.io/name: {{ include "orders.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
