--- a/src/user/kubernetes/init-job.yaml
+++ b/src/user/kubernetes/init-job.yaml
@@ -6,6 +6,9 @@ metadata:
 spec:
   ttlSecondsAfterFinished: 120
   template:
+    metadata:
+      annotations:
+        sidecar.istio.io/inject: "false"
     spec:
       restartPolicy: Never
       containers:
