add cert manager to the utils-setup
Enable latest cert-manager to the setup repo and deploy pods.

Several people requested this. Its common to people use lets encrypt or even self signed certificates.

--- a/deploy/complete/helm-chart/setup/requirements.yaml
+++ b/deploy/complete/helm-chart/setup/requirements.yaml
@@ -24,3 +24,8 @@ dependencies:
     version: 0.3.0-beta.2
     condition: catalog.enabled
     repository: https://svc-catalog-charts.storage.googleapis.com 
+  # cert-manager
+  - name: cert-manager
+    version: 0.15.0-alpha.0
+    condition: cert-manager.enabled
+    repository: https://charts.jetstack.io
