--- a/deploy/complete/helm-chart/mushop/templates/ingress.yaml
+++ b/deploy/complete/helm-chart/mushop/templates/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
 {{ include "mushop.labels" . | indent 4 }}
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
     {{- if .Values.ingress.tls }}
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     cert-manager.io/cluster-issuer: {{ include "mushop.fullname" . }}-{{ .Values.ingress.clusterIssuer }}
@@ -25,6 +26,10 @@ spec:
             # intentionally w/o .Release.Name for metrics workshop
             serviceName: edge
             servicePort: {{ $.Values.edge.service.port }}
+        - path: /grafana(/|$)(.*)
+          backend:
+            serviceName: grafana
+            servicePort: 80
     {{- end -}}
     {{ else }}
     - http:
@@ -34,6 +39,10 @@ spec:
             # intentionally w/o .Release.Name for metrics workshop
             serviceName: edge
             servicePort: {{ .Values.edge.service.port }}
+        - path: /grafana(/|$)(.*)
+          backend:
+            serviceName: grafana
+            servicePort: 80
     {{- end -}}
   {{- if .Values.ingress.tls }}
   tls:
