--- a/src/carts/pom.xml
+++ b/src/carts/pom.xml
@@ -18,8 +18,8 @@
         <helidon.version>1.4.1</helidon.version>
         <jsonb.version>1.0.2</jsonb.version>
         <yasson.version>1.0.6</yasson.version>
-        <jdbc.version>19.3.0.0</jdbc.version>
-        <soda.version>1.1.0</soda.version>
+        <jdbc.version>19.6.0.0</jdbc.version>
+        <soda.version>1.1.4</soda.version>
         <junit.version>5.5.2</junit.version>
         <mainClass>mushop.carts.Main</mainClass>
         <libs.classpath.prefix>libs</libs.classpath.prefix>
@@ -64,12 +64,12 @@
             <version>${helidon.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.oracle.ojdbc</groupId>
+            <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ojdbc8</artifactId>
             <version>${jdbc.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.oracle.ojdbc</groupId>
+            <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ucp</artifactId>
             <version>${jdbc.version}</version>
         </dependency>
