--- a/deploy/complete/helm-chart/mushop/charts/user/templates/user-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/user/templates/user-deployment.yaml
@@ -18,6 +18,8 @@ spec:
         app.kubernetes.io/name: {{ include "user.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
         mockmode: {{ .Values.global.mock.service | quote }}
+      annotations:
+        sidecar.istio.io/rewriteAppHTTPProbers: "true"
     spec:
       initContainers:
         {{- include "user.init.wallet" . | nindent 8 }}
