--- a/deploy/complete/docker-compose/docker-compose.yml
+++ b/deploy/complete/docker-compose/docker-compose.yml
@@ -112,7 +112,7 @@ services:
 
   # OCI Carts service
   carts:
-    image: iad.ocir.io/oracle/ateam/mushop-carts:1.3.1
+    image: iad.ocir.io/oracle/ateam/mushop-carts:1.4.0
     ports:
       - 8086:80
     hostname: carts
@@ -128,7 +128,7 @@ services:
       - OADB_USER
       - OADB_PW
       - OADB_SERVICE=mock
-      - JAVA_OPTS=-Xms64m -Xmx128m -XX:+UseG1GC -Dlogging.level.mushop.carts=TRACE -Djavax.net.ssl.trustStorePassword=Welcome123 -Djavax.net.ssl.keyStorePassword=Welcome123 -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
+      - JAVA_OPTS= -Xms64m -Xmx128m -XX:+UseG1GC -Dlogging.level.mushop.carts=TRACE  -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
 
   # OCI Orders service
   orders:
