--- a/deploy/complete/helm-chart/mushop/Chart.yaml
+++ b/deploy/complete/helm-chart/mushop/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
-description: A Helm chart for Kubernetes
+description: MuShop App microservices chart
 name: mushop
-version: 0.1.0
+version: 0.1.1
