--- a/deploy/complete/terraform/schema.yaml
+++ b/deploy/complete/terraform/schema.yaml
@@ -1,3 +1,7 @@
+# Copyright (c) 2020 Oracle and/or its affiliates. All rights reserved.
+# Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.
+# 
+
 title: "MuShop App"
 description: "Oracle Container Engine (OKE) stack for MuShop App"
 schemaVersion: 1.1.0
