--- a/deploy/complete/terraform/chart-values/grafana.yaml
+++ b/deploy/complete/terraform/chart-values/grafana.yaml
@@ -23,6 +23,18 @@ dashboards:
       gnetId: 6336
       revision: 1
       datasource: Prometheus
+dashboardProviders:
+   dashboardproviders.yaml:
+     apiVersion: 1
+     providers:
+     - name: 'default'
+       orgId: 1
+       folder: ''
+       type: file
+       disableDeletion: true
+       editable: true
+       options:
+         path: /var/lib/grafana/dashboards/default
 sidecar:
   datasources:
     enabled: true
