--- a/deploy/complete/helm-chart/mushop/templates/cluster-issuers.yaml
+++ b/deploy/complete/helm-chart/mushop/templates/cluster-issuers.yaml
@@ -1,3 +1,7 @@
+# Copyright (c) 2019, 2020 Oracle and/or its affiliates. All rights reserved.
+# Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.
+# 
+
 {{- if .Values.ingress.clusterIssuer }}
 apiVersion: cert-manager.io/v1alpha2
 kind: ClusterIssuer
@@ -33,7 +37,7 @@ spec:
     solvers:
     - http01:
         ingress:
-          class:  nginx
+          class: nginx
 ---
 apiVersion: cert-manager.io/v1alpha2
 kind: ClusterIssuer
