--- a/deploy/complete/helm-chart/mushop/charts/carts/templates/oadb-secrets.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/carts/templates/oadb-secrets.yaml
@@ -1,7 +1,7 @@
 {{- $usesOsb := (index (.Values.global | default .Values) "osb").atp | default .Values.osb.atp -}}
 {{- $oadbService := .Values.secrets.oadbService | default .Values.global.oadbService -}}
 {{- $oadbWalletPw := .Values.secrets.oadbWalletPassword | default .Values.global.oadbWalletPassword -}}
-{{- $oadbUser := .Values.secrets.oadbUser | default (printf "%s_%s_user" .Release.Namespace .Chart.Name ) | trunc 96 -}}
+{{- $oadbUser := .Values.secrets.oadbUser | default (printf "%s_%s_user" .Release.Namespace .Chart.Name ) | replace "-" "_" | trunc 96 -}}
 {{- $oadbPass := .Values.secrets.oadbPassword | default (printf "%s_deFAUlt321#" .Chart.Name) -}}
 
 
