--- a/deploy/complete/helm-chart/setup/values.yaml
+++ b/deploy/complete/helm-chart/setup/values.yaml
@@ -77,3 +77,56 @@ grafana:
     - grafana-worldmap-panel
     - grafana-piechart-panel
     - btplc-status-dot-panel
+
+# https://github.com/helm/charts/blob/master/stable/jenkins/README.md
+jenkins:
+  enabled: true
+  master:
+    componentName: "jenkins-master"
+    image: "jenkins/jenkins"
+    tag: "lts"
+    numExecutors: 0
+    adminUser: "admin"
+    adminPassword: "Welcome1"
+    resources:
+      requests:
+        cpu: "1000m"
+        memory: "2048Mi"
+      limits:
+        cpu: "2000m"
+        memory: "4096Mi"
+    hostAliases: []
+    # Use ClusterIP if your setup includes ingress controller
+    serviceType: ClusterIP
+    slaveListenerPort: 50000
+    jenkinsUriPrefix: "/jenkins"
+    ingress:
+      enabled: true
+      paths:
+        - path: /jenkins
+          backend:
+            serviceName: >-
+              {{ template "jenkins.fullname" . }}
+            servicePort: 8080
+
+      #hostName: build.voicea.app
+      # For Kubernetes v1.14+, use 'networking.k8s.io/v1beta1'
+      apiVersion: "networking.k8s.io/v1beta1"
+      labels: {}
+      annotations:
+        kubernetes.io/ingress.class: nginx
+        # kubernetes.io/tls-acme: "true"
+        # certmanager.k8s.io/cluster-issuer: letsencrypt-prod
+        # ingress.kubernetes.io/secure-backends: "true"
+      # tls:
+      #  - secretName: build.voicea.app
+      #    hosts:
+      #      - build.voicea.app
+    installPlugins:
+      - kubernetes:1.26.1
+      - workflow-job:2.39
+      - workflow-aggregator:2.6
+      - credentials-binding:1.23
+      - git:4.2.2
+      - configuration-as-code:1.41
+      - blueocean:1.23.2
