--- a/deploy/complete/helm-chart/setup/requirements.yaml
+++ b/deploy/complete/helm-chart/setup/requirements.yaml
@@ -25,7 +25,7 @@ dependencies:
     repository: https://kubernetes.github.io/ingress-nginx
   # Service Catalog
   - name: catalog
-    version: 0.3.0-beta.2
+    version: 0.3.0
     condition: catalog.enabled
     repository: https://svc-catalog-charts.storage.googleapis.com 
   # cert-manager
